--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".ui.Help"/>
+        <activity android:name=".ui.Control"/>
+        <activity android:name=".ui.Dev"/>
     </application>
 
 </manifest>
