--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -39,4 +39,7 @@ dependencies {
     implementation 'com.birbit:android-priority-jobqueue:2.0.1'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+//    implementation 'me.aflak.libraries:bluetooth:1.3.4'
+//    implementation project(':app')
+//    implementation project(':bluetooth')
 }
